fixed z-index bug

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 
 .header__inner {
@@ -63,7 +64,7 @@
   @media only screen and (max-width: $screen-xl) {
     width: 300px;
   }
-  
+
   @media only screen and (max-width: $screen-l) {
     width: 55%;
   }
