--- a/src/app/shared/components/notification/notification.component.scss
+++ b/src/app/shared/components/notification/notification.component.scss
@@ -3,13 +3,13 @@
 .notification{
 
   &__list{
-    position: absolute;
+    position: fixed;
     top:20px;
     right: 20px;
-
+    z-index: 1;
     max-width: 16%;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
 
     list-style: none;
     user-select: none;
